# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.in
src/: main.py  settings.py  streamlit_ui.py  utils.py
