[project]
name = "project-name-here"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.0",
    "pydantic-settings>=2.9.1",
    "streamlit>=1.47.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
